--- a/android/YogSMS/YogSMS/res/values/strings.xml
+++ b/android/YogSMS/YogSMS/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="hello">Hello World, Main!</string>
     <string name="app_name">YogSMS</string>
+    <string name="btn_send">Send message</string>
 </resources>
